data/derived/comb/progs/unify/prog1375.ml.out
Characters 65-66:
  | h::t -> h::(append x t);;
                         ^
Error: This expression has type int list
       but an expression was expected of type int
